-------------------------- soilDB 1.0 (2013-04-04) ----------------------------
* fetchNASIS() is now much more efficient: faster / less memory used
* new function! fetchKSSL(): experimental interface to (most of) the KSSL data
	- queries can be performed by series name or GCS bounding box
	- data are delivered via CA Soil Resource Lab server

-------------------------- soilDB 0.9-8 (2013-04-03) ----------------------------
* fetchOSD() now immune to queries for non-soils
* improved efficiency in fetch* functions
* NASIS-DMU fetching functions now return more information, still not as complete as pedon-queries

-------------------------- soilDB 0.9-7 (2013-03-01) ----------------------------
* NASIS query functions now return only records from the selected set, please test older code!

-------------------------- soilDB 0.9-6 (2013-02-26) ----------------------------
* new function get_text_notes_from_NASIS_db() -- still needs proper documentation
* bug fixes to PedonPC and NASIS queries, new data elements returned by extended query functions
* SoilWeb queries via URL are now URL-encoded to allow for spaces in soil series names

-------------------------- soilDB 0.9-4 (2013-01-31) ----------------------------
* new function: fetchOSD() returns basic OSD data as a SoilProfileCollection

-------------------------- soilDB 0.9-3 (2013-01-08) ----------------------------
* speed-bump in color-fetching functions from NASIS/pedonPC
* fetchNASIS() now attempts to correct for >1 pedon/site by appending peiid to pedon_id

-------------------------- soilDB 0.9-2 (2012-12-18) ----------------------------
* new functions for getting / plotting the geographic extent of a soil series, using the SoilWeb query service:
  -seriesExtent() : fetches extent as a SpatialPolygonDataFrame
  -seriesExtentAsGmap() : fetches extent and plots on Google Maps (requires dismo package)

-------------------------- soilDB 0.9-1 (2012-11-27) ----------------------------